Fri Dec 21 03:15:52 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_mod_define_method): must not convert Method to Proc.

Fri Dec 21 01:17:57 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb (with_destdir): new.

	* lib/mkmf.rb: prefix target directories with $(DESTDIR) all.

	* lib/mkmf.rb: no need to mkdir $(libdir)

Thu Dec 20 10:37:32 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* intern.h: added prototypes: rb_cv_set(), rb_cv_get(),
	  rb_define_class_variable()

Wed Dec 19 14:05:00 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_mod_define_method): define_method should follow
	  default method visibility.

	* eval.c (rb_attr): should warn if the default method visibility
	  is "module_function" (can be error). 

	* eval.c (rb_mod_define_method): should define class/module method
	  also if the visibility is "module_function".

	* eval.c (rb_mod_define_method): should call hook method
	  "method_added", and "singleton_method_added".

Tue Dec 18 01:02:13 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_schedule): should not select a thread which is
	  not yet initialized.

Mon Dec 17 17:06:56 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* intern.h: add prototypes.
	  rb_str_dup_frozen()

	* ruby.h: added declaration.
	  rb_defout, rb_stdin, rb_stdout, rb_stderr, ruby_errinfo

	* rubyio.h: changed double include guard macro to RUBYIO_H.

	* array.c (inspect_call): make static.

	* eval.c (dvar_asgn): ditto.

	* io.c (rb_io_close_read): ditto.

	* lex.c (rb_reserved_word): ditto.

	* ruby.c: (req_list_head, req_list_last): ditto.

	* ruby.c (require_libraries): ditto.

Mon Dec 17 00:02:04 2001  Guy Decoux  <ts@moulon.inra.fr>

	* variable.c (find_class_path): should initialize iv_tbl if it's
	  NULL.

Fri Dec 14 00:16:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (rb_define_class): should return the existing class if