@@ -13,6 +13,15 @@
 #ifndef DLN_H
 #define DLN_H
 
+#ifdef __cplusplus
+# ifndef  HAVE_PROTOTYPES
+#  define HAVE_PROTOTYPES 1
+# endif
+# ifndef  HAVE_STDARG_PROTOTYPES
+#  define HAVE_STDARG_PROTOTYPES 1
+# endif
+#endif
+
 #ifndef _
 #ifndef __STDC__
 # define _(args) ()
